attempt to fix extra width on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -83,13 +83,13 @@ nav .items * {
 }
 
 .top-cover img {
+  z-index: -100000;
   position: fixed;
-  top: 0px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 0;
-  min-height: 100%;
-  min-width: 100%;
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
 }
 
 .top-cover .text {
